[gd_scene load_steps=2 format=2]

[ext_resource path="res://Cenas/Servicos/scripts/Lobby.gd" type="Script" id=1]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Players" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -96.0
margin_right = 160.0
margin_bottom = 96.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Label" type="Label" parent="Players"]
margin_left = 26.0
margin_top = 18.0
margin_right = 142.0
margin_bottom = 32.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Awaiting Players..."

[node name="Start" type="Button" parent="Players"]
margin_left = 98.551
margin_top = 136.663
margin_right = 223.551
margin_bottom = 165.663
size_flags_horizontal = 2
size_flags_vertical = 2
text = "START!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="ItemList" parent="Players"]
margin_left = 26.0
margin_top = 42.6403
margin_right = 294.0
margin_bottom = 114.64
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Connect" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = -78.0
margin_right = 134.0
margin_bottom = 83.0
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="Connect"]
margin_left = 14.0
margin_top = 11.0
margin_right = 56.0
margin_bottom = 25.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Name:"

[node name="Name" type="LineEdit" parent="Connect"]
margin_left = 15.0
margin_top = 28.0
margin_right = 171.0
margin_bottom = 52.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "The Warrior"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IPLabel" type="Label" parent="Connect"]
margin_left = 15.0
margin_top = 68.8316
margin_right = 57.0
margin_bottom = 82.8316
size_flags_horizontal = 2
size_flags_vertical = 0
text = "IP:"

[node name="IPAddress" type="LineEdit" parent="Connect"]
margin_left = 14.0
margin_top = 85.0
margin_right = 170.0
margin_bottom = 109.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "127.0.0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Host" type="Button" parent="Connect"]
margin_left = 215.551
margin_top = 28.0
margin_right = 271.551
margin_bottom = 52.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="Button" parent="Connect"]
margin_left = 215.551
margin_top = 85.0
margin_right = 271.551
margin_bottom = 109.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorLabel" type="Label" parent="Connect"]
margin_left = 15.0
margin_top = -45.3465
margin_right = 257.0
margin_bottom = -31.3465
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 0.820312, 0.291595, 0.291595, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorDialog" type="AcceptDialog" parent="."]
margin_right = 55.0
margin_bottom = 58.0
size_flags_horizontal = 2
size_flags_vertical = 2
window_title = "Alerta!"

[connection signal="pressed" from="Players/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Connect/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="Connect/Join" to="." method="_on_Join_pressed"]
